[project]
name = "litestar_proxy"
version = "0.1.0"
description = "Proxy middleware for the Litestar framework"
authors = [
    {name = "geeshta", email = "stefan.foldesi@outlook.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true
