[project]
authors = [
  {name = "geeshta", email = "stefan.foldesi@outlook.com"},
]
dependencies = [
  "litestar>=2.8.3",
  "httpx>=0.27.0",
  "fast-query-parsers>=1.0.3",
]
description = "Proxy middleware for the Litestar framework"
license = {text = "MIT"}
name = "litestar_proxy"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "uvicorn[standard]>=0.29.0",
  "ruff>=0.4.4",
  "isort>=5.13.2",
]
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"
