[project]
authors = [
  {name = "geeshta", email = "stefan.foldesi@outlook.com"},
]
dependencies = [
  "litestar>=2.0.0",
  "httpx", 
]
description = "Proxy middleware for the Litestar framework"
license = {text = "MIT"}
name = "litestar_proxy"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "litestar[standard]>=2.0.0",
  "mypy",
  "ruff",
  "isort",
]
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"
